# lms

./: .gitignore  Cargo.toml  README.md  lint.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: config.json
html/: index.js  login.html  notfound.html
lms-actions-db/: Cargo.toml
lms-actions-db/src/: actions.rs  actions_db.rs  lib.rs
lms-auth/: Cargo.toml
lms-auth/src/: auth.rs  lib.rs  local_crypto.rs
lms-autogen/: Cargo.toml
lms-autogen/src/: main.rs
lms-core/: Cargo.toml
lms-core/src/: app_ctx.rs  lib.rs  runtime.rs  uid_gen.rs
lms-core/src/actions_db/: actions.rs  actions_db.rs  mod.rs
lms-core/src/authdb/: auth_actors.rs  auth_db.rs  mod.rs
lms-core/src/blueprint/: blueprint.rs  mod.rs
lms-core/src/config/: batch_info.rs  config.rs  config_module.rs  course_info.rs  hash_algo.rs  mod.rs  reader.rs
lms-core/src/file_db/: file_config.rs  mod.rs  request_handler.rs
lms-core/src/file_db/snapshots/: lms_core__file_db__file_config__tests__serialize_file_holder.snap  lms_core__file_db__file_config__tests__serialize_remote_file_config.snap
lms-core/src/http/: mod.rs  request.rs  request_handler.rs  response.rs
lms-file-db/: Cargo.toml
lms-file-db/src/: file_config.rs  lib.rs  request_handler.rs
lms-file-db/src/snapshots/: lms_file_db__file_config__tests__serialize_file_holder.snap  lms_file_db__file_config__tests__serialize_remote_file_config.snap
lms-macros/: Cargo.toml
lms-macros/src/: lib.rs
lms-wasm/: Cargo.toml  package.json  wrangler.toml
lms-wasm/src/: env.rs  file.rs  handle.rs  http.rs  instance.rs  lib.rs  runtime.rs
lms-wasm/tests/: cf_tests.spec.ts  mf.ts
src/: lib.rs  main.rs
src/authdb/: auth_actors.rs  auth_db.rs
src/cli/: commands.rs  mod.rs  runner.rs
src/cli/rt/: env.rs  file.rs  http.rs  instance.rs  mod.rs
src/cli/server/: http1.rs  mod.rs  server.rs  server_config.rs
tests/: server_spec.rs  validation_spec.rs
tests/invalid_configs/: missing_db_path.json  missing_url.json  short_key.json  short_totp_key.json
tests/server/: config.json  config_notfound.json  config_unsupported_protocol.json
tests/snapshots/: server_spec__server_spec__invalid_route.snap  server_spec__server_spec__req-2.snap  server_spec__server_spec__req-3.snap  server_spec__server_spec__req-4.snap  server_spec__server_spec__req-5.snap  server_spec__server_spec__req-6.snap  server_spec__server_spec__req-7.snap
