workspace = { members = [ "lms-auth", "lms-autogen","lms-core"] }
[package]
name = "lms"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.3"
hyper = {version = "1.3.1", features = ["full"]}
http-body-util = "0.1.1"
futures-util = "0.3.30"
async-trait = "0.1.80"
lms-core = { path = "lms-core" }
anyhow = "1.0.82"
tokio = {version = "1.37.0", features = ["full"]}
log = "0.4.21"

[dev-dependencies]
httpmock = "0.7.0"
tempfile = "3.10.1"