[package]
name = "lms-actions-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
lms-core = { path = "../lms-core" }
lms-auth = { path = "../lms-auth" }
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
hyper = "1.3.1"
http-body-util = "0.1.1"
base64 = "0.22.0"