[package]
name = "lms-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
reqwest = { version = "0.12.3", features = ["json"] }
anyhow = "1.0.82"
totp-rs = "5.5.1"
libaes = "0.7.0"
base64 = "0.22.0"
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros"] }
httpmock = "0.7.0"