[package]
name = "lms-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0",features = []}
schemars = {version = "0.8.16",features = ["derive"]}
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
lms-auth = { path = "../lms-auth" }
anyhow = "1.0.82"
hyper = "1.3.1"
reqwest = "0.12.3"
async-trait = "0.1.80"
bytes = "1.6.0"
derive_setters = "0.1.6"
http-body-util = "0.1.1"
totp-rs = "5.5.1"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
url = "2.5.0"
async-recursion = "1.1.0"
log = "0.4.21"
rand = "0.9.0-alpha.1"
regex = "1.10.4"
base64 = "0.22.0"
dashmap = {version = "5.5.3",features = ["serde"]}

[dev-dependencies]
tokio = {version = "1.37.0",features = ["macros","fs"]}
httpmock = "0.7.0"
insta = "1.38.0"
tempfile = "3.10.1"