[package]
name = "lms-file-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lms-core = { path = "../lms-core" }
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = {version = "0.12.4"}
url = "2.5.0"
base64 = "0.22.0"