[package]
name = "lms-file-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lms-core = { path = "../lms-core" }
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = {version = "0.12.4"}
url = "2.5.0"
base64 = "0.22.0"

[dev-dependencies]
insta = "1.38.0"
tokio = {version = "1.37.0",features = ["macros"]}
httpmock = "0.7.0"
dashmap = "5.5.3"
hyper = "1.3.1"
async-trait = "0.1.80"
tempfile = "3.10.1"