[package]
name = "lms-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lms-core = { path = "../lms-core" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.4", default-features = false }
async-trait = "0.1.80"
anyhow = "1.0.82"
hyper = { version = "1.3.1", default-features = false }
async-std = {version = "1.12.0",features = ["wasm-bindgen-futures", "unstable"]}
log = "0.4.21"
wasm-logger = "0.2.0"
worker = "0.1.0"
wasm-timer = "0.2.5"
http-body-util = "0.1.1"
bytes = "1.6.0"
serde_qs = "0.13.0"
lazy_static = "1.4.0"
tokio = "1.37.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
tokio = {version = "1.37.0",features = ["macros"]}
httpmock = "0.7.0"